--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <button class="main-btn"><a href="/">Get Started</a></button>
         </div>
         <div class="main-img-container">
-            <img src="/1/images/pic1.svg" id="main-img"></img>
+            <img src="images/pic1.svg" id="main-img"></img>
         </div>
     </div>
   </div>
@@ -116,3 +116,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
